--- a/Mathgenie/package.json
+++ b/Mathgenie/package.json
@@ -7,5 +7,8 @@
     "dotenv": "^8.2.0",
     "mathjs": "^6.2.3",
     "node-telegram-bot-api": "^0.40.0"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
